apps/tailwind-components/app/assets/css/theme/umcg.css
:root[data-theme="umcg"] {
  --color-white: #fff;
  --color-orange-200: #ff6a00;
  --color-orange-500: #ff7d00;
  --color-umcg-dark-blue: #003183;
  --color-umcg-mid-blue: #476ca8;
  --color-umcg-light-blue: #017ffd;

  --text-color-logo-text: var(--color-umcg-dark-blue);

  --box-shadow-primary: none;
  --box-shadow-search-input: none;
  --box-shadow-pagination-gray: none;

  --background-image-sidebar-gradient: linear-gradient(
    180deg,
    #ffffff -24.76%,
    rgba(255, 255, 255, 0) 86.02%
  );
  --background-image-base-gradient: linear-gradient(
    180deg,
    #e3eff8,
    #e3eff8 133.81%
  );

  --opacity-background-gradient: 0;

  --background-color-button-primary: var(--color-orange-500);
  --background-color-button-primary-hover: var(--white);
  --background-color-button-secondary: var(--color-orange-500);
  --background-color-button-secondary-hover: var(--color-orange-200);
  --background-color-button-tertiary: var(--color-umcg-light-blue);
  --background-color-button-tertiary-hover: var(--color-umcg-light-blue);
  --background-color-button-outline: var(--color-white);
  --background-color-button-outline-hover: var(--color-white);
  --background-color-button-disabled: var(--color-gray-100);
  --background-color-button-disabled-hover: var(--color-gray-100);
  --background-color-search-button: var(--color-white);
  --background-color-navigation: var(--color-white);
  --background-color-search-results-view-tabs: var(--color-umcg-dark-blue);
  --background-color-search-filter-group-toggle: #bdcce4;
  --background-color-app-wrapper: var(--color-transparent);
  --background-color-pagination: var(--color-transparent);
  --background-color-pagination-hover: var(--color-umcg-dark-blue);
  --background-color-footer: var(--color-white);
  --background-color-modal-footer: #e3eff8;

  --text-color-button-primary: var(--color-white);
  --text-color-button-primary-hover: var(--color-orange-500);
  --text-color-button-secondary: var(--color-white);
  --text-color-button-secondary-hover: var(--color-gray-900);
  --text-color-button-tertiary: var(--color-white);
  --text-color-button-tertiary-hover: var(--color-white);
  --text-color-button-outline: var(--color-umcg-dark-blue);
  --text-color-button-outline-hover: var(--color-umcg-dark-blue);
  --text-color-button-disabled: var(--color-gray-600);
  --text-color-button-disabled-hover: var(--color-gray-600);
  --text-color-menu: var(--color-umcg-dark-blue);
  --text-color-sub-menu: var(--color-umcg-dark-blue);
  --text-color-sub-menu-hover: var(--color-umcg-dark-blue);
  --text-color-breadcrumb-arrow: var(--color-umcg-mid-blue);
  --text-color-breadcrumb: var(--color-umcg-mid-blue);
  --text-color-title: var(--color-umcg-dark-blue);
  --text-color-title-contrast: var(--color-gray-900);
  --text-color-sub-title-contrast: var(--color-umcg-dark-blue);
  --text-color-search-button: var(--color-umcg-light-blue);
  --text-color-search-button-hover: var(--color-umcg-light-blue);
  --text-color-favorite: var(--color-umcg-light-blue);
  --text-color-favorite-hover: var(--color-umcg-dark-blue);
  --text-color-search-results-view-tabs: var(--color-umcg-dark-blue);
  --text-color-search-results-view-tabs-hover: var(--color-umcg-dark-blue);
  --text-color-search-filter-title: var(--color-umcg-dark-blue);
  --text-color-search-filter-action: #0075ff;
  --text-color-search-filter-action-mobile: var(--color-blue-800);
  --text-color-search-filter-group-title: var(--color-umcg-dark-blue);
  --text-color-search-filter-group-title-mobile: var(--color-black);
  --text-color-search-filter-group-checkbox: #ccc;
  --text-color-search-filter-group-toggle: var(--color-umcg-dark-blue);
  --text-color-search-filter-title-inverted: var(--color-back);
  --text-color-search-filter-action-inverted: var(--color-yellow-500);
  --text-color-search-filter-group-title-inverted: var(--color-black);
  --text-color-search-filter-group-checkbox-inverted: var(--color-yellow-500);
  --text-color-search-filter-group-toggle-inverted: var(--color-black);
  --text-color-tooltip-hover-dark: var(--color-umcg-dark-blue);
  --text-color-tooltip-hover-light: var(--color-umcg-dark-blue);
  --text-color-pagination: var(--color-umcg-dark-blue);
  --text-color-pagination-button: var(--color-umcg-dark-blue);
  --text-color-pagination-input: var(--color-umcg-dark-blue);
  --text-color-pagination-hover: var(--color-white);
  --text-color-link: var(--color-umcg-mid-blue);
  --text-color-link-inverted: var(--color-blue-500);
  --text-color-table-row: var(--color-gray-900);

  --border-color-button-primary: var(--color-orange-500);
  --border-color-button-primary-hover: var(--color-orange-500);
  --border-color-button-secondary: var(--color-orange-500);
  --border-color-button-secondary-hover: var(--color-orange-500);
  --border-color-button-tertiary: var(--color-umcg-dark-blue);
  --border-color-button-tertiary-hover: var(--color-umcg-dark-blue);
  --border-color-button-outline: var(--color-umcg-dark-blue);
  --border-color-button-outline-hover: var(--color-umcg-dark-blue);
  --border-color-button-disabled: var(--color-gray.100);
  --border-color-button-disabled-hover: var(--color-gray.100);
  --border-color-menu-active: var(--color-orange-500);
  --border-color-search-button: #cccccc;
  --border-color-search-input: #cccccc;
  --border-color-search-input-mobile: var(--color-gray.100);
  --border-color-pagination: var(--color-umcg-dark-blue);
  --border-color-checkbox: #cccccc;
  --border-color-footer: var(--background-color-footer);

  --border-radius-3px: 3px;
  --border-radius-50px: 50px;
  --border-radius-input: 28px;
  --border-radius-textarea-input: 20px;
  --border-radius-search-input: 3px;
  --border-radius-search-button: 0px 3px 3px 0px;
  --border-radius-pagination: 3px;
  --border-radius-landing: 3px;

  --border-width-theme: 0px;

  --logo: UMCGkort.woordbeeld;
}

